--- a/_units/07.md
+++ b/_units/07.md
@@ -195,19 +195,19 @@ Pacemaker and accumulator models are well supported by neural evidence. Neurolog
 ## Covariance Model
 One common observation in rhythm production is that when asked to tap evenly, humans tend to produce rhythms that are slightly uneven. For example, suppose you are required to produce even taps of two taps per second. Here is a time line of your expected taps, in seconds:
 
-{% include img-figure url="/MUTOR/assets/images/unit7_eventap.gif" description="eventap.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_eventap.png" description="eventap.png" %}
 
 However, it turns out that the actual measured production is as followed:
 
-{% include img-figure url="/MUTOR/assets/images/unit7_eventap2.gif" description="eventap2.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_eventap2.png" description="eventap2.png" %}
 
 The simplest mathematical model to predict this pattern of behavior is the covariance model. The covariance model proposes that a negative correlation exists between the time interval between two taps and the time interval between the two taps immediately preceding. That is, if $t_n$ is the time interval between successive taps, i.e.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_eventap3.gif" description="eventap3.gif" width="200px" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_eventap3.png" description="eventap3.png" width="200px" %}
 
 Then for every time interval $t_n$, the next time interval, $t_{n+1}$, is negatively correlated in length.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_eventap4.gif" description="eventap4.gif" width="200px" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_eventap4.png" description="eventap4.png" width="200px" %}
 
  If $t_n$ is long, then $t_{n+1}$ is short; if $t_n$ is short, then $t_{n+1}$ is long. (This is the negative correlation principle).
 Much of the deviations between rhythmic tapping can be modelled this way.
@@ -236,8 +236,10 @@ Coupled oscillators as two symmetrical springs. (image source: http://webpages.u
 Coupled pendulum oscillators (image source: http://xeon.concord.org:8080/modeler/index.html)
 
 {% include img-figure url="/MUTOR/assets/images/unit7_pendulum.gif" description="pendulum.gif" width="200px" %}
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/unit7_pendulum.gif" description="pendulum.gif" width="200px" %}
-<!-- Can you make the two pendulum images right next to each other? (left and right, not up and down) -->
+Can you make the two pendulum images right next to each other? (left and right, not up and down)
+{% endcomment %}
 
 Applied to rhythm, the coupled oscillator model states that rhythm is the result of a set of internal oscillators which entrain towards the expected rhythm. Large and Kolen (1994) and McAuley (1996) have modeled the perception and production of rhythm using coupled oscillators, where the placement of each beat within a metric structure is set by the phase of the oscillator, and individual oscillators entrain towards the recurrent beat. The use of coupled oscillators has led to some successful beat-finding algorithms. Coupled oscillator theories are computationally attractive as they can predict many observations, including the perception of meter as a recurrent rhythmic pattern, using relatively elegant mathematical models. Unfortunately, we are not yet sure of physiological bases of coupled oscillator models.
 
