Remake 2.22 mso_coincidence2.png

--- a/_units/02.md
+++ b/_units/02.md
@@ -233,7 +233,7 @@ Jeffress (1948) proposed a model of how the auditory system computes interaural 
 {% include img-figure url="/MUTOR/assets/images/mso_coincidence1.jpg" description="A. Model of Coincidence Cetection" width="400px" %}
 (image source: http://www.physiology.wisc.edu A. Jeffress's (1948) model of coincidence detection.)
 
-{% include img-figure url="/MUTOR/assets/images/mso_coincidence2.jpg" description="B. Physiological Implementation of Coincidence Detection" width="300px" %}
+{% include img-figure url="/MUTOR/assets/images/mso_coincidence2.png" description="B. Physiological Implementation of Coincidence Detection" width="300px" %}
 {% comment %} B. Coincidence detectors for computing interaural time differences /yin/jorissmithyin98.pdf) {% endcomment %}
 {% comment %} LOOKS MOVED TO THE LEFT :/ {% endcomment %}
 
