--- a/_units/04.md
+++ b/_units/04.md
@@ -545,7 +545,7 @@ These findings
 suggest that the biological basis of dissonance between complex tones is coded 
 at the midbrain level.
 
-{% include img-figure url="/MUTOR/assets/images/icfiring.GIF"
+{% include img-figure url="/MUTOR/assets/images/icfiring.png"
 description="Mean rates of fluctuations of IC neurons in response to pure and complex tone pairs." %}
 
 Studies with lesion patients have also shown effects of consonance and dissonance 
