Remake 8.11 unit8_Gestalt_proximity

--- a/_units/08.md
+++ b/_units/08.md
@@ -118,11 +118,11 @@ We perceive the white dots as one group and the black dots as another group; thi
  {% include img-figure url="/MUTOR/assets/images/unit8_symmetry2.png" description="Principle of symmetry" width="400px" %}
 ## Proximity
 - elements that are close together are more likely to be grouped together.
-The dots that are closer together are perceived as being grouped together.
+The squares that are closer together are perceived as being grouped together.
 {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_proximity.png" description="Principle of proximity" %}
 ## Good continuation
 - we tend to perceive figures as being continuous.
- The red diagonal is perceived as one line instead of two, due to the principle of good continuation.
+ The pink diagonal is perceived as one line instead of two, due to the principle of good continuation.
 {% include img-figure url="/MUTOR/assets/images/unit8_goodcontinuation.png" description="Principle of good continuation" width="400px" %}
 ## Closure
 - we tend to see complete figures despite missing parts.
