Remake 8.9 unit8_Gestalt_similarity.png

--- a/_units/08.md
+++ b/_units/08.md
@@ -110,7 +110,7 @@ According to the Gestalt psychologists, the brain uses the principles of Gestalt
 The principles include:
 ## Similarity
 -- elements that are more similar (i.e. share common features) are more likely to be grouped together.
-We perceive the white dots as one group and the black dots as another group; this illustrates grouping by similarity of colour.
+We perceive the cyan squares as one group and the pink squares as another group; this illustrates grouping by similarity of colour.
 {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_similarity.png" description="Principle of similarity" %}
 ## Symmetry
 -- symmetrical figures are perceived as being grouped together.
