Replace 9.5 unit9-Archicembalo_en_Cents

--- a/_units/09.md
+++ b/_units/09.md
@@ -125,7 +125,7 @@ A number of variants have been in use, e.g. quarter-comma and third-comma meanto
 
 Many of these tunings and temperaments lead to tuning alternatives for a given key. For instance, in just intonation an Ab (8/5; going down by a just major third) is different from a G# (25/16; stacking two just major thirds). Hence, Keyboards such as the archicembalo built in 1588 have  been constructed to represent tuning alternatives.
 
-{% include img-figure url="/MUTOR/assets/images/unit9-Archicembalo_en_Cents.jpg" description="The Archicembalo had a large number of tuning alternatives for the 12 keys of the chromatic scale." %}
+{% include img-figure url="/MUTOR/assets/images/unit9-Archicembalo_en_Cents.png" description="The Archicembalo had a large number of tuning alternatives for the 12 keys of the chromatic scale." %}
 
 # Equal Temperament
 
