New 9.13 gamelan orchestra image from wikimedia commons

--- a/_units/09.md
+++ b/_units/09.md
@@ -227,7 +227,8 @@ Another classes of tunings cannot be classified into neither group. It includes 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Gamelan_Dissonance_Curve.png" description="Dissonance Curve for the pelog scale" width="400px" %}
 
-{% include img-figure url="/MUTOR/assets/images/unit9_Gamelan-Orchestra.png" description="A Gamelan orchestra" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_Gamelan-Orchestra.jpg" description="A Gamelan orchestra" %}
+(Image source: https://commons.wikimedia.org/wiki/File:Indra_Swara_gamelan.jpg)
 
 A comprehensive list of tunings and temperaments (currently more than 4600 files) can be found in the [Scala Archive](http://www.huygens-fokker.org/microtonality/scales.html).
 
