Replace 10.2 unit10_expvio_models

--- a/_units/10.md
+++ b/_units/10.md
@@ -133,7 +133,7 @@ Meyer (1956), in his seminal book Emotion and Meaning in Music, proposed that sy
 
 Although the model allows for many possibilities, the exact relationship between expectation and affect was not formally defined in the Expectation-Arousal theory. Thus it is unclear exactly what degree of expectation leads to maximal arousal; nor it is clear how expectation can be systematically manipulated. 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_expvio_models.gif" description="Models of expectation violation" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_expvio_models.png" description="Models of expectation violation" %}
 
 Three possible functions relating expectation and arousal. Meyer's (1956) Expectation-Arousal theory does not differentiate between these three predictions. 
 
