--- a/_units/10.md
+++ b/_units/10.md
@@ -166,22 +166,25 @@ In the Jones et al (2002) experiment, melodies were played with the last note's 
 A diagram of the Jones et al paradigm: 
 
 {% include img-figure url="/MUTOR/assets/images/unit10_jones1.png" description="Jones 1" width="400px" %}
-(image source: Huron, 2006) 
+(Adapted from: Huron, 2006) 
 
 Cartoon of results from Jones et al, showing heightened perceptual accuracy at the expected onset time:
 
-{% include img-figure url="/MUTOR/assets/images/unit10_jones2.gif" description="Jones 2" width="300px" %}
-(image source: Huron, 2006)
+{% include img-figure url="/MUTOR/assets/images/unit10_jones2.png" description="Jones 2" width="300px" %}
+(Adapted from: Huron, 2006)
 
 Rhythmic Expectancy Curve showing optimal perceptual performance when the target note is at the expected downbeat. 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_jones_exp_curve.gif" description="Jones exp curve" width="500px" %}
-(image source: Jones et al, 2002).
+{% include img-figure url="/MUTOR/assets/images/unit10_jones_exp_curve.png" description="Jones exp curve" width="500px" %}
+{% comment %}
+Original description: 'Mean proportion correct in Experiment 2 as a function of the critical interonset interval (IOI), for experimental listeners told to ignore interpolated tones.'
+{% endcomment %}
+(Adapted from: Jones et al, 2002)
 
 A model of rhythmic entrainment 
 
 {% include img-figure url="/MUTOR/assets/images/unit10_jones_entrain.gif" description="Jones entrainment model" %}
- (image source: Jones et al, 2002)
+(Adapted from: Jones et al, 2002)
 
 # Methods for assessing musical expectancy
 
