Replace 10.7 unit10_jones_entrain.png

--- a/_units/10.md
+++ b/_units/10.md
@@ -183,7 +183,7 @@ Original description: 'Mean proportion correct in Experiment 2 as a function of 
 
 A model of rhythmic entrainment 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_jones_entrain.gif" description="Jones entrainment model" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_jones_entrain.png" description="Jones entrainment model" %}
 (Adapted from: Jones et al, 2002)
 
 # Methods for assessing musical expectancy
