Replace 10.8 unit10_probetoneprofiles1.png

--- a/_units/10.md
+++ b/_units/10.md
@@ -184,6 +184,9 @@ Original description: 'Mean proportion correct in Experiment 2 as a function of 
 A model of rhythmic entrainment 
 
 {% include img-figure url="/MUTOR/assets/images/unit10_jones_entrain.png" description="Jones entrainment model" %}
+{% comment %}
+Original description: 'Schematic illustration of an attending oscillator driven by a regular stimulus rhythm with fixed onset-to-onset time intervals between tones (i.e., fixed interonset intervals, or IOIs). Oscillator phase corresponds to the time difference between a pulse peak and a tone onset (dashed line). Oscillator period refers to the time interval between recurrent pulse peaks (arrow). The insert illustrates a predicted expectancy profile based on the shape of a single attentional pulse; accuracy (proportion correct) is shown to be greatest when the peak of an attentional pulse co-occurs with the onset of a comparison tone.'
+{% endcomment %}
 (Adapted from: Jones et al, 2002)
 
 # Methods for assessing musical expectancy
