Replace 10.10 unit10_balinese_correlations.png

--- a/_units/10.md
+++ b/_units/10.md
@@ -252,7 +252,7 @@ To gain a full understanding of musical expectation, it is not enough to only us
 
 In a study using melodies from the Balinese slendro scale (Castellno et al, 1984), Indonesian and Western subjects Results from probe tone profiles obtained from Balinese music were correlated with tones heard in the Balinese slendro scale. For Indonesian subjects with long-term exposure to Balinese music, correlational strengths reflected a sensitivity to the hierarchy of the scale; i.e. tones that fitted the tonal hierarchy were rated as most fitting, whereas atypical tones in the Balinese scale structure were rated as poorly fitting. In contrast, after listening to Balinese melodies, Westerners demonstrated a significant correlation with the occurrence of the Balinese music; that is, Westerners rated anything they had heard in the Balinese music as being well-fitting. 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_balinese_correlations.jpg" description="balinese correlations" width="500px" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_balinese_correlations.png" description="balinese correlations" width="500px" %}
 (image adapted from Huron, 2006) Results from probe tone profiles obtained from North Indian music.
 
 The ethnomusicologist Simha Arom (1991) has investigated rhythm and polyrhythm in Central African music using cognitive principles. His results show that while African music seems to have incredibly complex rhythmic structures, where each member of an ensemble operates at a different metric pattern, these complex polyrhythms could in fact be broken down into simple time ratios such as 2+2+3. These results suggest that expectancy for complex rhythms could also operate on simple cognitive structures. 
