Replace 10.12 unit10_rt-harm-priming3.png

--- a/_units/10.md
+++ b/_units/10.md
@@ -268,7 +268,7 @@ In the standard reaction time experiment looking at harmonic expectancy (e.g. Bh
  
 Examples of chord progressions with expected and unexpected endings presented to the participants. 
 
-{% include img-figure url="/MUTOR/assets/images/unit10_rt-harm-priming3.gif" description="rt-harm-priming3.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit10_rt-harm-priming3.png" description="rt-harm-priming3.gif" %}
  (image source: Bigand et al, 1999)
 
 Results from a harmonic priming paradigm.
