improved reference system and added references for most units

--- a/_units/02.md
+++ b/_units/02.md
@@ -46,6 +46,120 @@ test_questions:
   2. cotton earplugs
   
   3. plastic inserts
+  
+references:
+  griffiths:
+    authors:
+      - firstname: T.
+        lastname: Griffiths
+    title: 'The neural processing of complex sounds'
+    publication: 'In Cognitive Neuroscience of Music, Peretz, I. & Zatorre, R (Eds.), pp. 168-180. Oxford University Press'
+    year: 2003
+
+  peretz:
+    authors: 
+      - firstname: I.
+        lastname: Peretz
+    title: 'Brain specialization for music: new evidence from congenital amusia'
+    publication: 'In Cognitive Neuroscience of Music, Peretz, I. & Zatorre, R (Eds.), pp. 192-203. Oxford University Press'
+    year: 2003
+
+  mckinney_et_al:
+    authors: 
+      - firstname: M.F.
+        lastname: McKinney
+      - firstname: M.J.
+        lastname: Tramo
+      - firstname: B.
+        lastname: Delgutte
+    title: 'Neural correlates of the dissonance of musical intervals in the inferior colliculus'
+    publication: 'In Physiological and Psycophysical Bases of Auditory Function. D.J. Breebaart, A.J.M. Houtsma, A. Kohlrausch, V.F. Prijs, and R. Schoonhoven (Eds), pp. 83-89. Maastricht: Shaker'
+    year: 2001
+
+  fay_and_popper:
+    authors: 
+      - firstname: R.R.
+        lastname: Fay
+      - firstname: A.N.
+        lastname: Popper
+    title: 'Evolution of hearing in vertebrates: the inner ears and processing.'
+    publication: 'Hearing research, 149: 1-10'
+    year: 2000
+
+  hoistad_and_hain:
+    authors: 
+      - firstname: D.L.
+        lastname: Hoistad
+      - firstname: T.C. 
+        lastname: Hain
+    title: 'Central hearing loss with a bilateral inferior colliculus lesion'
+    publication: 'Audiol and Neurootol 8(2): 111-113'
+    doi: 'https://doi.org/10.1159/000068999'
+    year: 2003
+
+  hauser_and_mcdermott:
+    authors: 
+      - firstname: M.D.
+        lastname: Hauser
+      - firstname: J.
+        lastname: McDermott
+    title: 'The evolution of the music faculty: a comparative perspective.'
+    publication: 'Nature Neuroscience, 6: 668-668'
+    year: 2003
+
+  watts:
+    authors: 
+      - firstname: L.
+        lastname: Watts
+    title: 'Cochlear Mechanics: Analysis and Analog VLSI'
+    publication: 'Doctoral dissertation'
+    year: 1993
+
+  carr_and_konishi:
+    authors: 
+      - firstname: C.E.
+        lastname: Carr
+      - firstname: M. 
+        lastname: Konishi
+    title: "Axonal delay lines for time measurement in the owl's brainstem"
+    publication: 'Proc. Natl. Acad. Sci. USA, 85: 8311-8315'
+    year: 1988
+
+  joris_et_al:
+    authors: 
+      - firstname: P.X.
+        lastname: Joris
+      - firstname: P.H.
+        lastname: Smith
+      - firstname: T.C.T.
+        lastname: Yin
+    title: 'Coincidence Detection in the Auditory System'
+    publication: 'Neuron, 21(6): 1235-1238'
+    doi: 'https://doi.org/10.1016/S0896-6273(00)80643-1'
+    year: 1998
+    
+  zatorre_and_belin:
+    authors: 
+      - firstname: R.J.
+        lastname: Zatorre
+      - firstname: P.
+        lastname: Belin
+    title: 'Spectral and temporal processing in human auditory cortex.'
+    publication: 'Cerebral Cortex, Vol. 11: 946-953'
+    year: 2001
+
+  liberman_et_al:
+    authors: 
+      - firstname: M.C.
+        lastname: Liberman
+      - firstname: L.W.
+        lastname: Dodds
+      - firstname: S.
+        lastname: Pierce
+    title: 'Afferent and efferent innervation of the cat cochlea: quantitative analysis with light and electron microscopy'
+    publication: 'Journal of Computational Neurology, 301(3): 443-460'
+    doi: 'https://doi.org/10.1002/cne.903010309'
+    year: 1990
 
 layout: unit
 citations: ""
@@ -505,6 +619,7 @@ In this unit we have comprehensively covered the structure and function of the a
 
 We also compared our musical system with animals of other species. Finally, we looked at when the auditory system malfunctions - what the various types of hearing loss are, how they are detected, and how to protect your own hearing.
 
+{% if false %}
 # References
 
 * Griffiths, T. 2003. The neural processing of complex sounds. In Peretz, I. & Zatorre, R. (Eds.) Cognitive
@@ -515,11 +630,18 @@ Neuroscience of Music, pp.168-180. Oxford University Press.
 * Fay, R.R. Popper, A.N. 2000 Evolution of hearing in vertebrates: the inner ears and processing. Hearing research, 149, 1-10.
 * Hoistad DL. and Hain TC. "Central hearing loss with a bilateral inferior colliculus lesion." Audiol Neurootol 8(2): 111-3.(2003) Rossing, Moore & Wheeler. 2001. The Science of Sound. Addison Wesley.
 * Hauser, M.D., McDermott, J. (2003). The evolution of the music faculty: a comparative perspective. Nature Neuroscience, 6: 663-668
+
 * Watts, L. 1993. Cochlear Mechanics:Analysis and Analog VLSI. Doctoral dissertation.
+
 * Carr and Konishi (1988) PNAS 85 (21): 8311. http://www.pnas.org/cgi/reprint/85/21/8311
+
 * Joris, Smith, and Yin. 1998. Coincidence Detection In The Auditory System: 50 Years After Jeffress. Neuron, 21, 1235-1238.
+
 * Zatorre, R.J. and Belin, P. Spectral and temporal processing in human auditory cortex. Cerebral Cortex, Vol. 11, pp. 946-953, 2001
+
 * Liberman et al. 1991. Afferent and efferent innervation of the cat cochlea: quantitative analysis with light and electron microscopy. Journal of Computational Neurology. http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed& list_uids=2262601&dopt=Citation
+
+{% endif %}
 
 {% comment %}
 # Links and Downloads
