--- a/_units/03.md
+++ b/_units/03.md
@@ -45,6 +45,105 @@ test_questions:
  - How is loudness calculated for a complex tone with a rich harmonic spectrum?
 
  - A guitarist plucks a string in a concert hall 30ft in depth. How long does it take for the earliest reflection from the furthest wall to reach her ears? Please refer to the diagram below. guitarreverb.jpg Guitar Reverb
+ 
+references:
+  hirsh_and_watson:
+    authors:
+      - firstname: I.J.
+        lastname: Hirsh
+      - firstname: C.S.
+        lastname: Watson
+    title: 'Auditory psychophysics and perception'
+    publication: 'Annual Reviews of Psychology, 47: 461-484'
+    year: 1996
+    
+  mcgurk_and_macdonald:
+    authors:
+      - firstname: H.
+        lastname: McGurk
+      - firstname: J.
+        lastname: MacDonald
+    title: 'Hearing lips and seeing voices'
+    publication: 'Nature, 264: 746-748'
+    year: 1976
+    
+  schafer:
+    authors:
+      - firstname: R.M.
+        lastname: Schafer
+    title: 'Soundscape: Our sonic environment and the tuning of the world'
+    publication: 'Destiny Books'
+    year: 1993
+    
+  bregman:
+    authors:
+      - firstname: A.S.
+        lastname: Bregman
+    title: 'Auditory Scene Analysis'
+    publication: 'MIT Press'
+    year: 1997
+    
+  clifton:
+    authors:
+      - firstname: R.K.
+        lastname: Clifton
+    title: 'Breakdown of echo suppression in the precedence effect'
+    publication: 'Journal of the Acoustical Society of America, 82(5): 1834-1835'
+    year: 1987
+    
+  blauert:
+    authors:
+      - firstname: J.
+        lastname: Blauert
+    title: 'Spatial Hearing'
+    publication: MIT Press'
+    year: 1983
+    
+  dent_et_al:
+    authors:
+      - firstname: M.L.
+        lastname: Dent
+      - firstname: D.J.
+        lastname: Tolin
+      - firstname: T.C.T.
+        lastname: Yin
+    title: 'Cats exhibit the Franssen Effect illusion'
+    publication: 'Journal of the Acoustical Society of America, 116(5): 3070-3074'
+    year: 2004
+    
+  wickens:
+    authors:
+      - firstname: T.D.
+        lastname: Wickens
+    title: 'Elementary Signal Detection Theory'
+    publication: 'Oxford University Press'
+    year: 2001
+    
+  boltz:
+    authors:
+      - firstname: M.G.
+        lastname: Boltz
+    title: 'Musical soundtracks as a schematic influence on the cognitive processing of filmed events'
+    publication: 'Music Perception'
+    year: 2001
+    
+  narmour:
+    authors:
+      - firstname: E.
+        lastname: Narmour
+    title: 'The Analysis and Cognition of Basic Melodic Structures: The Implication-Realization Model'
+    publication: University of Chicago Press'
+    year: 1990
+    
+  howard_and_angus:
+    authors:
+      - firstname: D.M.
+        lastname: Howard
+      - firstname: J.
+        lastname: Angus
+    title: 'Acoustics and Psychoacoustics'
+    publication: 'Focal Press'
+    year: 1996
 
 ###
 # page layout:
@@ -1026,7 +1125,7 @@ Auditory Scene Analysis - Bregman's book on MIT Press
 Music Perception journal
 
 {% endcomment %}
-
+{% if false %}
 # References
 
 Wikipedia article on soundscape
@@ -1053,6 +1152,6 @@ Narmour, E. (1990) The Analysis and Cognition of Basic Melodic Structures: The I
 
 Howard, D.M., and Angus, J. Acoustics and Psychoacoustics, Focal Press, 1996.
 http://hyperphysics.phy-astr.gsu.edu/Hbase/acoustic/auditcon.html
-
+{% endif %}
 
 {% include unit_postamble.md %}
