--- a/_units/04.md
+++ b/_units/04.md
@@ -50,6 +50,45 @@ test_questions:
    complex tones presented at a tritone apart?
  - According to the Wright-Bregman hypothesis, what factors may influence the 
    perception of dissonance?
+   
+references:
+  bekesy_nobel:
+    authors: 
+      - firstname: G.
+        lastname: "von B&eacute;k&eacute;sy"
+    title: 'Concerning the pleasures of observing, and the mechanics of the inner ear'
+    publication: 'Nobel Lecture'
+    year: 1961
+
+  plomp_and_levelt_tonal_consonance:
+    authors:
+      - firstname: R.
+        lastname: Plomp
+      - firstname: W. J. M.
+        lastname: Levelt
+    title: 'Tonal Consonance and Critical Bandwidth'
+    publication: 'The Journal of the Acoustical Society of America 38, 548'
+    year: 1965
+    doi: 'https://doi.org/10.1121/1.1909741'
+
+  fletcher_auditory_patterns:
+    authors:
+      - firstname: H.
+        lastname: Fletcher
+    title: 'Auditory Patterns'
+    publication: 'Rev. Mod. Phys. 12, 47'
+    year: 1940
+    doi: 'https://doi.org/10.1103/RevModPhys.12.47'
+
+  maccallum_roughness:
+    authors:
+      - firstname: J.
+        lastname: MacCallum
+      - firstname: A.
+        lastname: Einbond
+    title: 'Real-Time Analysis of Sensory Dissonance'
+    publication: 'Computer Music Modelling and Retrieval, R. Kronland-Martinet, S. Ystad, and K. Jensen (Eds.), LNCS 4969, pp. 203-211. Springer-Verlag, Berlin, Heidelberg'
+    year: 2008
 
 ###
 # page layout:
@@ -61,6 +100,7 @@ mathjax: true
 ---
 
 {% include unit_preamble.md %}
+
 
 # What do we mean by "Consonance" and "Dissonance"?
 
