--- a/_units/07.md
+++ b/_units/07.md
@@ -32,6 +32,105 @@ test_questions:
  - What are the axes of a rhythmogram?
  - What is microtiming?
  - What are the relative advantages and disadvantages of the interval timing model and the coupled oscillator model?
+ 
+references:
+  iyer:
+    authors:
+      - firstname: V.
+        lastname: Iyer
+    title: 'Microstructures of Feel, Macrostructures of Sound: Embodied Cognition in West African and African-American Musics'
+    publication: 'Doctoral Dissertation, University of California, Berkeley'
+    year: 1998
+    
+  desain_and_windsor:
+    authors:
+      - firstname: P.
+        lastname: Desain
+      - firstname: L.
+        lastname: Windsor
+    title: 'Rhythm perception and production'
+    publication: 'http://www.nici.ru.nl/mmm/papers/rpp-book/rpp-book.html'
+    year: 2000
+    
+  todd:
+    authors:
+      - firstname: N.P.
+        lastname: Todd
+    title: 'The auditory "primal sketch": A multiscale model of rhythmic grouping'
+    publication: 'Journal of New Music Research, 23: 25-70'
+    year: 1994
+    
+  benadon:
+    authors:
+      - firstname: F.
+        lastname: Benadon
+    title: 'Slicing the beat : Jazz eighth-notes as expressive microrhythm'
+    publication: 'Ethnomusicology, 50(1): 73-98'
+    year: 2006
+    
+  desain_and_honing:
+    authors:
+      - firstname: P.
+        lastname: Desain
+      - firstname: H.
+        lastname: Honing
+    title: 'The Formation of Rhythmic Categories and Metric Priming'
+    publication: 'Perception'
+    doi: 'https://doi.org/10.1068/p3370'
+    year: 2003
+    
+  diedrichsen_et_al:
+    authors:
+      - firstname: J.
+        lastname: Diedrichsen
+      - firstname: R.B.
+        lastname: Ivry
+      - firstname: J.
+        lastname: Pressing
+    title: 'Cerebellar and basal ganglia contributions to interval timing'
+    publication: 'In Functional and neural mechanisms of interval timing, Meck, W.H. (Ed.), pp. 457–483'
+    year: 2003
+    
+  sadakata_et_all:
+    authors:
+      - firstname: M.
+        lastname: Sadakata
+      - firstname: P.
+        lastname: Desain
+      - firstname: H.
+        lastname: Honing
+    title: 'The Bayesian way to relate rhythm perception and production'
+    publication: 'Music Perception, 23(3): 267-286'
+    year: 2006
+    
+  buhusi_and_meck:
+    authors:
+      - firstname: C.V.
+        lastname: Buhusi
+      - firstname: W.H.
+        lastname: Meck
+    title: 'What makes us tick? Functional and neural mechanisms of interval timing'
+    publication: 'Nature Reviews Neuroscience, 6: 755–765'
+    year: 2005
+    
+  large_and_kohlen:
+    authors:
+      - firstname: E.W.
+        lastname: Large
+      - firstname: J.F.
+        lastname: Kolen
+    title: 'Resonance and the Perception of Musical Meter'
+    publication: 'Connection Science, 6: 177-208'
+    doi: 'https://doi.org/10.1080/09540099408915723'
+    year: 2007
+    
+  barlow:
+    authors:
+      - firstname: C.
+        lastname: Barlow 
+    title: 'On Musiquantics'
+    publication: 'Report No.51 of the Musicological Institute / Musikinformatik & Medientechnik of the University of Mainz'
+    year: 2012
 
 ###
 # page layout:
@@ -360,6 +459,7 @@ Barlow has often used such profiles in his compositions based on a generative pr
 # Summary
 We have provided an overview of the physic and biology of rhythm perception and production. Our perception of rhythm depends on sounds; in particular on perceptual accents or event onsets within the streams of sounds to which we are exposed in the environment. Rhythm seems to function optimally at the range of the Tactus, and can be subdivided into the smallest unit known as the Tatum. Microtiming and expressive timing can be described using time maps, which include the rhythmogram and graphs relating score time to performance time. Models of rhythm and meter can be divided into two broad classes known as the interval timing models and the coupled oscillator models. In some cases, rhythm production can also be modeled as covariance. The Bayesian method provides a method to relate rhythm perception with production.
 
+{% if false %}
 # References
 
 Vijay Iyer's thesis: http://cnmat.berkeley.edu/People/Vijay/00.3%20Table%20of%20Contents.html#anchor292689
@@ -382,6 +482,8 @@ http://www.nature.com/nrn/journal/v6/n10/pdf/nrn1764.pdf
 Large & Kohlen. (1994). Connection Science, 6 (1), 177 - 208.
 
 Barlow (2012). On Musiquantics http://clarlow.org/wp-content/uploads/2016/10/On-MusiquanticsA4.pdf
+
+{% endif %}
 
 {% comment %}
 ## Links and Downloads
