--- a/_units/08.md
+++ b/_units/08.md
@@ -30,6 +30,49 @@ test_questions:
 - To what extent is melodic contour important to our musical experience?
 - What are the axes of a musical texture space? How does it categorize different musical genres?
 
+references:
+  deutsch_audio_illusions:
+    authors:
+      - firstname: D.
+        lastname: Deutsch
+    title: "Diana Deutsch's Audio Illusions"
+    publication: 'http://philomel.com'
+    year: 2003
+    
+  narmour:
+    authors:
+      - firstname: E.
+        lastname: Narmour
+    title: 'The Analysis and Cognition of Basic Melodic Structures: The Implication-Realization Model'
+    publication: 'University of Chicago Press'
+    year: 1990
+    
+  huron:
+    authors:
+      - firstname: D.
+        lastname: Huron
+    title: 'Tone and Voice: A Derivation of the Rules of Voice-Leading from Perceptual Principles'
+    publication: 'Music Perception, 19(1): 1-64'
+    year: 2001
+    
+  krumhansl:
+    authors:
+      - firstname: C.L.
+        lastname: Krumhansl
+    title: 'Music psychology and music theory: Problems and prospects'
+    publication: 'Music Theory Spectrum, 17: 53-80'
+    year: 1995
+    
+  hippel_and_huron:
+    authors:
+      - firstname: P.
+        lastname: von Hippel
+      - firstname: D.
+        lastname: Huron
+    title: 'Melodic gap-fill and regression to the mean'
+    publication: 'American Musicological Society, Northern / Central California Chapter Meeting'
+    year: 1998
+    
 ###
 # page layout:
 # don't change
@@ -243,6 +286,7 @@ This texture space may be used to predict different musical styles. Different ge
 this link is not working
 {% endcomment %}
 
+{% if false %}
 # References
 
 - Diana Deutsch's CD Musical Illusions and Paradoxes.http://philomel.com
@@ -253,6 +297,7 @@ this link is not working
 - Narmour, E. (1990). The analysis and cognition of basic melodic structures: The implication-realization model. Chicago: University of Chicago Press.
 - von Hippel, P. & Huron, D. Melodic gap-fill and regression to the mean.American Musicological Society, Northern/Central California Chapter Meeting.
 Oakland, California (1998 Feb. 7)
+{% endif %}
 
 {% comment %}
 # Links and Downloads
