--- a/_units/09.md
+++ b/_units/09.md
@@ -31,6 +31,133 @@ test_questions:
  - What are some ways in which recent composers have sought to create tension and release in music without going back to the tonal system of the past?
  - Why is the context in which a sonority appears important?
 
+references:
+  aldwell_and_schachter:
+    authors:
+      - firstname: E.
+        lastname: Aldwell
+      - firstname: C.
+        lastname: Schachter
+      - firstname: A.
+        lastname: Cadwallader
+    title: 'Harmony and Voice Leading'
+    publication: 'Cengage Learning'
+    year: 2018
+    
+  barbour:
+    authors:
+      - firstname: J.M.
+        lastname: Barbour
+    title: 'Tuning and temperament: A historical survey'
+    publication: 'Courier Corporation'
+    year: 2004
+    
+  blackwood:
+    authors:
+      - firstname: E.
+        lastname: Blackwood
+    title: 'Twelve microtonal etudes: for electronic music media, op. 28'
+    publication: 'G. Schirmer'
+    year: 1982
+    
+  bohlen:
+    authors:
+      - firstname: H.
+        lastname: Bohlen
+    title: '13 Tonstufen in der Duodezime'
+    publication: 'Acustica, 39(2): 76-86'
+    year: 1978
+    
+  helmholtz:
+    authors:
+      - firstname: H.
+        lastname: von Helmholtz
+    title: 'On the sensations of tone'
+    publication: 'Courier Corporation'
+    year: 2013
+    
+  grisey:
+    authors:
+      - firstname: G.
+        lastname: Grisey
+    title: "Tempus ex machina: a composer’s reflections on musical time"
+    publication: 'Contemporary Music Review, 2(1): 239-276'
+    year: 1987
+    
+  loui_et_al:
+    authors:
+      - firstname: P.
+        lastname: Loui
+      - firstname: D.L.
+        lastname: Wessel
+      - firstname: C.L.
+        lastname: Hudson Kam
+    title: 'Humans rapidly learn grammatical structure in a new musical scale'
+    publication: 'Music Perception, 27(5): 377-388'
+    year: 2010
+    
+  muller_et_all:
+    authors:
+      - firstname: N.-L.
+        lastname: Müller
+      - firstname: K.
+        lastname: Orlandatou
+      - firstname: G.
+        lastname: Hajdu
+    title: 'Starting Over – Chances Afforded by a New Scale'
+    publication: 'In 1001 Microtones, Stahnke, M. and Safari, S. (Eds.). Von Bockel, 127–172'
+    year: 2014
+    
+  parncutt:
+    authors:
+      - firstname: R.
+        lastname: Parncutt
+    title: 'Harmony: A Psychoacoustical Approach'
+    publication: 'Springer-Verlag, Berlin'
+    year: 1989
+    
+  partch:
+    authors:
+      - firstname: H.
+        lastname: Partch
+    title: 'Genesis Of A Music: An Account Of A Creative Work, Its Roots, And Its Fulfillments'
+    publication: 'Da Capo Press'
+    year: 1979
+    
+  saariaho:
+    authors:
+      - firstname: K.
+        lastname: Saariaho
+    title: 'Timbre and harmony: Interpolations of timbral structures'
+    publication: 'Contemporary Music Review, 2(1): 93-134'
+    year: 1987
+    
+  sabat_and_schweinitz:
+    authors:
+      - firstname: M.
+        lastname: Sabat
+      - firstname: W.
+        lastname: von Schweinitz
+    title: 'The Extended Helmholtz-Ellis JI Pitch Notation'
+    publication: 'Plainsound Music Edition'
+    year: 2004
+    
+  sethares:
+    authors:
+      - firstname: W.A.
+        lastname: Sethares
+    title: 'Tuning, Timbre, Spectrum, Scale'
+    publication: 'Springer Science & Business Media'
+    year: 2005
+    
+  Wessel:
+    authors:
+      - firstname: D.L.
+        lastname: Wessel
+    title: 'Timbre space as a musical control structure'
+    publication: 'Computer Music Journal, 3(2): 45-52'
+    year: 1979
+    
 ###
 # page layout:
 # don't change
@@ -305,6 +432,7 @@ A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.
 
 {% include img-figure url="/MUTOR/assets/images/unit9_migrator1.png" description="Roughness" %}
 
+{% if false %}
 # References
 
 E. Aldwell, C. Schachter & A. Cadwallader. Harmony and voice leading. Cengage Learning, 2018.
@@ -334,6 +462,7 @@ M. Sabat & W. von Schweinitz. The Extended Helmholtz-Ellis JI Pitch Notation. Pl
 W.A. Sethares. Tuning, timbre, spectrum, scale. Springer Science & Business Media, 2005.
 
 D. Wessel.  Timbre space as a musical control structure.  xenakis.ircam.fr/articles/textes/Wessel78a/, 1978.
+{% endif %}
 
 {% comment %}
 # Links and Downloads
