--- a/_units/10.md
+++ b/_units/10.md
@@ -34,6 +34,61 @@ test_questions:
  - Describe the probe tone paradigm. What do probe tone profiles look like?
  - What are event-related potentials and what do they show for unexpected musical chords?
  - What kinds of statistics are used in musical compositions?
+ 
+references:
+  huron:
+    authors:
+      - firstname: D.
+        lastname: Huron
+    title: 'Sweet Anticipation'
+    publication: 'MIT Press'
+    year: 2006
+  
+  krumhansl_and_kessler:
+    authors:
+      - firstname: C.L.
+        lastname: Krumhansl
+      - firstname: E.J.
+        lastname: Kessler
+    title: 'Tracing the dynamic changes in perceived tonal organization in a spatial representation of musical keys'
+    publication: 'Psychological Review, 89(4): 334-368'
+    year: 1982
+  
+  krumhansl1995:
+    authors:
+      - firstname: C.L.
+        lastname: Krumhansl
+    title: 'Music Psychology and Music Theory: Problems and Prospects'
+    publication: 'Music Theory Spectrum, 17(1): 53-57, 78-80'
+    year: 1995
+  
+  castellano_et_all:
+    authors:
+      - firstname: M.A.
+        lastname: Castellano
+      - firstname: J.J.
+        lastname: Bharucha
+      - firstname: C.L.
+        lastname: Krumhansl
+    title: 'Tonal hierarchies in the music of North India'
+    publication: 'Journal of Experimental Psychology: General, 113(3): 394–412'
+    year: 1984
+  
+  arom:
+    authors:
+      - firstname: S.
+        lastname: Arom
+    title: 'African polyphony and polyrhythm: musical structure and methodology'
+    publication: 'Cambridge University Press'
+    year: 1991
+  
+  krumhansl1990:
+    authors:
+      - firstname: C.L.
+        lastname: Krumhansl
+    title: 'Cognitive Foundations of Musical Pitch'
+    publication: 'Oxford University Press'
+    year: 1990
 
 ###
 # page layout:
@@ -350,6 +405,7 @@ Expectation and anticipation are important and evolutionarily advantageous chara
 
 Musical expectancies have been observed using many convergent methods. These methods include production, betting paradigm, probe tone ratings, comparative ethnomusicology, reaction time methodology, the head turn paradigm, and Event-Related Potentials. Statistics in music seem to play an important role in musical composition, where we generally expect musical events that occur with high frequencies and transitional probabilities in a musical style.
 
+{% if false %}
 # References
 
 * Huron, D. (2006). Sweet Anticipation.
@@ -358,6 +414,8 @@ Musical expectancies have been observed using many convergent methods. These met
 * MA Castellano, JJ Bharucha, CL Krumhansl - J Exp Psychol Gen, 1984
 * S Arom. 1991. African polyphony and polyrhythm: musical structure and methodology. Cambridge University Press 
 * C.L. Krumhansl, (1990). Cognitive Foundations of Musical Pitch. Oxford Univ. Press.
+
+{% endif %}
 
 {% comment %}
 # Links and Downloads
