--- a/_units/05.md
+++ b/_units/05.md
@@ -36,6 +36,108 @@ test_questions:
  - The calculation of virtual pitch was attributed to cubic difference tones  in past which, strikingly, yield similar results. Explain why the brain will most likely still use a different method and give an example where difference tones and virtual pitch differ.
 
  - Discuss to what extent the tonality profiles derived by the probe tone method point to universal musical principles or whether it's rather cultural influences that determine the perception of tonal hierachies.
+ 
+references:
+  pressnitzer_et_al:
+    authors:
+      - firstname: D.
+        lastname: Pressnitzer
+      - firstname: R.
+        lastname: Patterson
+      - firstname: K.
+        lastname: Krumbholtz
+    title: 'The lower limit of melodic pitch'
+    publication: 'Journal of the Acoustical Society of America, 109(5): 2076-2084'
+    year: 2001
+    
+  cheviegne:
+    authors:
+      - firstname: A.
+        lastname: 'de Cheveigne'
+    title: 'Pitch perception models'
+    publication: 'In Pitch, Plack, C. and Oxenham, A. (eds.). Springer Verlag'
+    year: 2004
+    
+  krumhansl:
+    authors:
+      - firstname: C.L.
+        lastname: Kruumhansl
+    title: 'Cognitive foundations of musical pitch'
+    publication: 'Oxford University Press'
+    year: 1990
+    
+  licklider:
+    authors:
+      - firstname: J.C.R
+        lastname: Licklider
+    title: 'A duplex theory of pitch perception'
+    publication: 'Journal of the Acoustical Society of America, 23(1): 147'
+    year: 1951
+    
+  lin_and_hartmann:
+    authors:
+      - firstname: JY
+        lastname: Lin
+      - firstname: W.M.
+        lastname: Hartmann
+    title: 'The pitch of a mistuned harmonic: Evidence for a template model'
+    publication: 'Journal of the Acoustical Society of America, 103: 2608'
+    doi: 'https://doi.org/10.1121/1.422781'
+    year: 1998
+    
+  patterson_et_al:
+    authors:
+      - firstname: R.D.
+        lastname: Patterson
+      - firstname: M.H.
+        lastname: Allerhand
+      - firstname: C.
+        lastname: Giguere
+    title: 'Time‐domain modeling of peripheral auditory processing: A modular architecture and a software platform'
+    publication: 'The Journal of the Acoustical Society of America, 98(4), 1890-1894'
+    year: 1995
+    
+  schoenberg_and_stein:
+    authors:
+      - firstname: A.
+        lastname: Schoenberg
+      - firstname: L.
+        lastname: Stein
+    title: 'Structural Functions of Harmony'
+    publication: 'WW Norton & Company'
+    year: 1969
+    
+  shepard:
+    authors:
+      - firstname: R.N.
+        lastname: Shepard
+    title: 'Geometrical Approximations to the Structure of Musical Pitch'
+    publication: 'Psychological Review 89(4)'
+    year: 1982
+    
+  slaney_and_lyon:
+    authors:
+      - firstname: M.
+        lastname: Slaney
+      - firstname: R.F.
+        lastname: Lyon
+    title: 'On the importance of time-a temporal representation of sound'
+    publication: 'Visual representations of speech signals, Cooke, M., Beet, s., and Crawford, M (eds.), pp. 95-116'
+    year: 1993
+    
+  warren_et_al:
+    authors:
+      - firstname: J.D.
+        lastname: Warren
+      - firstname: S.
+        lastname: Uppenkamp
+      - firstname: R.D.
+        lastname: Patterson
+      - firstname: T.D.
+        lastname: Griffiths
+    title: 'Separating pitch chroma and pitch height in the human brain'
+    publication: 'Proceedings of the National Academy of Sciences, 100(17), 10038-10042'
+    year: 2003
 
 ###
 # page layout:
@@ -277,6 +379,7 @@ With the help of Krumhansl's model, when playing (tonal) music, it is possible t
 </video>
 {% include end-figure %}
 
+{% if false %}
 # References
 
 - Pressnitzer, D; Patterson, R; & Krumbholtz. (2001). The lower limit of melodic pitch. JASA, 2076-2084.
@@ -284,11 +387,13 @@ With the help of Krumhansl's model, when playing (tonal) music, it is possible t
 - Krumhansl,  C.L.  (1990). Cognitive foundations  o f musical pitch.  New York:  Oxford University Press.
 - Licklider, J. C. R. (1951). A duplex theory of pitch perception. The Journal of the Acoustical Society of America, 23(1), 147-147.
 - Lin & Hartmann, 1998. http://www.pa.msu.edu/acoustics/template.pdf
+
 - Patterson, R. D., Allerhand, M. H., & Giguere, C. (1995). Time‐domain modeling of peripheral auditory processing: A modular architecture and a software platform. The Journal of the Acoustical Society of America, 98(4), 1890-1894.
 - Schoenberg, A., & Stein, L. (1969). Structural functions of harmony (No. 478). WW Norton & Company.
 - Shepard, R.N. (1982) Geometrical Approximations to the Structure of Musical Pitch. Psychological Review 89(4)
 - Slaney, M., & Lyon, R. F. (1993). On the importance of time-a temporal representation of sound. Visual representations of speech signals, 95116.
 - Warren, J. D., Uppenkamp, S., Patterson, R. D., & Griffiths, T. D. (2003). Separating pitch chroma and pitch height in the human brain. Proceedings of the National Academy of Sciences, 100(17), 10038-10042.
+{% endif %}
 
 {% comment %}
 # Links and Downloads
